--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Asset Servicing</title>
+    <title>DSD</title>
     <meta name="description" content="DAML App Tempate">
     <meta name="keywords" content="daml app template">
     <meta name="author" content="Digital Asset (Switzerland) GmbH">
