Run on DAML Hub

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -9,9 +9,9 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>DSD</title>
-    <meta name="description" content="DAML App Tempate">
-    <meta name="keywords" content="daml app template">
+    <title>DSP</title>
+    <meta name="description" content="DAML Digital Securities Platform">
+    <meta name="keywords" content="daml digital securities platform">
     <meta name="author" content="Digital Asset (Switzerland) GmbH">
   </head>
   <body style="font-family: 'Roboto', sans-serif;">
